test shell and start init